@@ -1,3 +1,9 @@
+Fri Nov  3 12:20:09 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/OTriangle.java: Let computeNormal3D()
+	and computeNormal3DT() return triangle area instead of 2*area.
+	This does not change current computations, but is less confusing.
+
 Thu Nov  2 17:29:22 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: New
